Remove failing bogus DCHECK on ShowUnhandledTapUIIfNeeded

A dcheck was in place to determine if handling event was set or not.
This clearly isn't the case when this code is called. It was decided
that this dcheck isn't needed.

BUG=732949

Change-Id: Ic7cf8546efcf4349f0b399d4cb6a9e1a3d924d9d
Reviewed-on: https://chromium-review.googlesource.com/537453
Reviewed-by: Alexandre Elias <aelias@chromium.org>
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#479845}
Former-commit-id: f73ee9f71d87e3deb732db3b9ebe16a8c8d23821